click controlled by d3, fixed cursor issue, scroll
-cursor not registering was caused by canvas dimension being too large and overflowing over the filters.

--- a/style.css
+++ b/style.css
@@ -48,7 +48,6 @@ h5 {
 }
 
 body {
-  --sb-width: 5rem;
   font-family: system-ui, sans-serif;
   font-size: 16px;
   /* line-height: 1.7; */
@@ -56,9 +55,6 @@ body {
   background-color: #fff;
 }
 
-body.sb-expanded {
-  --sb-width: 20rem;
-}
 
 
 /* controls placement of aside div */
@@ -67,9 +63,8 @@ div.aside {
   position: fixed;
   inset: 0 0 0 auto;
   padding: 1rem;
-  width: var(--sb-width);
-
-  transition: width 0.5s ease-in-out;
+  width: 20rem;
+  /* transition: width 0.5s ease-in-out; */
 }
 
 div.sidebar {
@@ -84,7 +79,7 @@ div.sidebar ul {
   gap: 0.25rem;
 }
 
-div.sidebar a {
+div.sidebar button {
   display: flex;
   align-items: center;
   gap: 0.625rem;
@@ -94,45 +89,34 @@ div.sidebar a {
   color: #000000;
   text-decoration: none;
   border-radius: 0.375rem;
-  transition: background-color 0.5s ease-in-out, color 0.5s ease-in-out;
+  /* transition: background-color 0.5s ease-in-out, color 0.5s ease-in-out; */
 }
 
-div.sidebar a.active,
-div.sidebar a:hover,
-div.sidebar a:focus-visible {
+div.sidebar button.active,
+div.sidebar button:hover,
+div.sidebar button:focus-visible {
   outline: none;
   color: #b366fc;
   background-color: #fff;
 }
 
-div.sidebar a span {
+div.sidebar button span {
   font-size: 0.875rem;
-  opacity: 0;
-  visibility: hidden;
-  transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
-}
-
-.sb-expanded div.sidebar a span {
   opacity: 1;
   visibility: visible;
-}
-
-.sb-expanded div#filters {
-  display: block;
+  /* transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out; */
 }
 
 div#filters {
-  display: none;
-  transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
+  opacity: 1;
+  visibility: visible;
+  /* transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out; */
 }
 
-.sb-expanded div.aside .bx-chevrons-right {
-  rotate: 180deg;
-}
 
-div.main {
+/* div.main {
   width: 5rem;
-  padding: 1rem;
+  padding: 1rem 1rem;
   transition: width 0.5s ease-in-out;
 }
 
@@ -140,4 +124,4 @@ div.main {
   div.main {
     width: calc(90vw - var(--sb-width));
   }
-}
+} */
